added most views to repo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,21 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="trans">#00FFFFFF</color>
+
+    <!--Tema principal-->
+    <color name="primary_day">#6700AF</color>
+    <color name="OnPrimary_day">#FFFFFF</color>
+    <color name="secondary_day">#E9DDFF</color>
+    <color name="OnSecondary_day">#52007E</color>
+
+    <!--Tema nit-->
+    <color name="primary_night">#DAC8FF</color>
+    <color name="OnPrimary_night">#52007E</color>
+    <color name="secondary_night">#6700AF</color>
+    <color name="OnSecondary_night">#DAC8FF</color>
+
+    <color name="chatbot">#116073</color>
+    <color name="search_bar">#F7E7FF</color>
+    <color name="main_background">#B796E9</color>
 </resources>
