--- a/app/src/main/res/mipmap-hdpi/layout/activity_main.xml
+++ b/app/src/main/res/mipmap-hdpi/layout/activity_main.xml
@@ -5,10 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/background">
 
     <fragment
-        android:name="com.ericandpau.pokeshopk.NavBar"
+        android:name="com.ericandpau.pokeshop.NavBar"
         android:id="@+id/NavBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,11 +66,11 @@
 
 
     <fragment
-        android:name="com.ericandpau.pokeshopk.product"
+        android:name="com.ericandpau.pokeshop.producte"
         android:id="@+id/product1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_product"
+        tools:layout="@layout/fragment_producte"
         app:layout_constraintTop_toBottomOf="@+id/searchCard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -158,7 +159,7 @@
         android:id="@+id/bottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="com.ericandpau.pokeshopk.BottomNav"
+        android:name="com.ericandpau.pokeshop.BottomNav"
         tools:ignore="MissingConstraints"
         tools:layout="@layout/fragment_bottom_nav"
         app:layout_constraintBottom_toBottomOf="parent"
