--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -19,14 +19,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:layout_marginEnd="70dp"
+            android:layout_marginRight="70dp"
             android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/hamburgesa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="7dp"
+                android:layout_marginRight="7dp"
                 android:layout_weight="1"
                 android:src="@drawable/baseline_menu_24" />
 
@@ -59,7 +59,7 @@
                 android:id="@+id/cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="@string/cart"
                 android:backgroundTint="@color/primary_day"/>
