--- a/app/src/main/res/layout/activity_carreto.xml
+++ b/app/src/main/res/layout/activity_carreto.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductList">
+    tools:context=".CarretoActivity"
+    android:background="@drawable/background">
 
     <fragment
         android:name="com.ericandpau.pokeshopk.NavBar"
@@ -17,37 +18,50 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Title"
+        android:text="@string/carretoTitle"
+        android:textSize="14pt"
+        android:padding="16dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/NavBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <fragment
-        android:name="com.ericandpau.pokeshopk.product"
+        android:name="com.ericandpau.pokeshopk.CartProduct"
         android:id="@+id/product1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_product"
-        app:layout_constraintTop_toBottomOf="@+id/NavBar"
+        tools:layout="@layout/fragment_cart_product"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <fragment
-        android:name="com.ericandpau.pokeshopk.product"
+        android:name="com.ericandpau.pokeshopk.CartProduct"
         android:id="@+id/product2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_product"
+        tools:layout="@layout/fragment_cart_product"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/product1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <fragment
-        android:name="com.ericandpau.pokeshopk.product"
-        android:id="@+id/product3"
+    <Button
+        android:layout_marginTop="20dp"
+        android:id="@+id/comanda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_product"
+        android:text="@string/ferComanda"
         app:layout_constraintTop_toBottomOf="@+id/product2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"/>
+        android:backgroundTint="@color/primary_day"/>
 
     <fragment
         android:id="@+id/bottom_nav"
@@ -60,5 +74,6 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout="@layout/fragment_bottom_nav" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
