--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CarretoActivity"
+    tools:context=".ProductsActivity"
     android:background="@drawable/background">
 
     <fragment
@@ -18,50 +18,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Title"
-        android:text="@string/carretoTitle"
-        android:textSize="14pt"
-        android:padding="16dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/NavBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <fragment
-        android:name="com.ericandpau.pokeshop.CartProduct"
+        android:name="com.ericandpau.pokeshopk.Producte"
         android:id="@+id/product1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_cart_product"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
+        tools:layout="@layout/fragment_producte"
+        app:layout_constraintTop_toBottomOf="@+id/NavBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <fragment
-        android:name="com.ericandpau.pokeshop.CartProduct"
+        android:name="com.ericandpau.pokeshopk.Producte"
         android:id="@+id/product2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_cart_product"
-        android:layout_marginTop="20dp"
+        tools:layout="@layout/fragment_producte"
         app:layout_constraintTop_toBottomOf="@+id/product1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="15dp"/>
 
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/comanda"
+    <fragment
+        android:name="com.ericandpau.pokeshopk.Producte"
+        android:id="@+id/product3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ferComanda"
+        tools:layout="@layout/fragment_producte"
         app:layout_constraintTop_toBottomOf="@+id/product2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="@color/primary_day"/>
+        android:layout_marginTop="15dp"/>
 
     <fragment
         android:id="@+id/bottom_nav"
@@ -74,6 +61,5 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout="@layout/fragment_bottom_nav" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
