--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PokeShop" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/primary_night</item>
-        <item name="colorOnPrimary">@color/OnPrimary_night</item>
-        <item name="colorSecondary">@color/secondary_night</item>
-        <item name="colorOnSecondary">@color/OnSecondary_night</item>
+    <style name="Theme.PokeShop" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorOnPrimary">@color/OnPrimary</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorOnSecondary">@color/OnSecondary</item>
     </style>
 </resources>
