--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,22 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyApp" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">@color/primary_day</item>
-        <item name="colorSecondary">@color/secondary_day</item>
-        <item name="colorOnPrimary">@color/OnPrimary_day</item>
-        <item name="colorOnSecondary">@color/OnSecondary_day</item>
-    <style name="Base.Theme.PokeShop" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
-
-    <style name="Theme.PokeShop" parent="Base.Theme.PokeShop" />
-
-    <style name="Theme.MyApp" parent="Theme.Material3.Dark.NoActionBar">
-        <!-- Personaliza los colores principales -->
-        <item name="colorPrimary">@color/primary_day</item>
-        <item name="colorSecondary">@color/secondary_day</item>
-        <item name="colorOnPrimary">@color/OnPrimary_day</item>
-        <item name="colorOnSecondary">@color/OnSecondary_day</item>
+    <style name="Theme.PokeShop" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorOnPrimary">@color/OnPrimary</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorOnSecondary">@color/OnSecondary</item>
     </style>
 </resources>
