--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -173,7 +173,7 @@
                 android:layout_weight="1"
                 android:textSize="20sp"
                 android:layout_marginLeft="5dp"
-                android:text="Configuracio" />
+                android:text="Perfil" />
 
         </LinearLayout>
 
