--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -6,10 +6,17 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".filters"
+    tools:context=".Filters"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:paddingTop="10dp">
+
+    <fragment
+        android:name="com.ericandpau.pokeshopk.NavBar"
+        android:id="@+id/NavBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </fragment>
 
     <TextView
         android:id="@+id/filters_title"
@@ -78,4 +85,19 @@
         android:layout_height="wrap_content"
         android:text="Aplicar Filtres"
         android:backgroundTint="@color/primary_day"/>
+
+    <fragment
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.ericandpau.pokeshopk.BottomNav"
+        tools:ignore="MissingConstraints"
+        tools:layout="@layout/fragment_bottom_nav"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"/>
+
+
 </LinearLayout>
