--- a/app/src/main/res/layout/fragment_bottom_nav.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav.xml
@@ -1,44 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="?android:attr/buttonBarStyle"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    tools:context=".BottomNav"
-    android:layout_gravity="bottom"
-    android:background="@color/secondary_day">
+    android:layout_width="match_parent">
 
-    <Button
-        android:id="@+id/exit"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/secondary_day"
-        android:text="@string/sortir"
-        android:textColor="@color/OnSecondary_day"
-        android:textSize="20sp" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/bottom_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/secondary_day"
+        style="@style/BottomNavigationViewStyle"
+        app:itemIconTint="@color/primary_day"/>
 
-    <Button
-        android:id="@+id/pokes"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:backgroundTint="@color/secondary_day"
-        android:text="@string/pokemons"
-        android:textColor="@color/OnSecondary_day"
-        android:textSize="20sp"
-        android:layout_weight="1" />
-
-    <Button
-        android:id="@+id/help"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:backgroundTint="@color/secondary_day"
-        android:text="@string/ajuda"
-        android:textColor="@color/OnSecondary_day"
-        android:textSize="20sp"
-        android:layout_weight="1"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
