--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,49 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <!-- Fragmento para la barra de navegación superior (NavBar) -->
-    <androidx.fragment.app.FragmentContainerView
+    <fragment
         android:name="com.ericandpau.pokeshopk.NavBar"
         android:id="@+id/NavBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_nav_bar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Título de la pantalla -->
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Perfil"
-        android:paddingTop="130dp"
-        android:gravity="center"
+        android:text="@string/perfil"
         android:textSize="30sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/NavBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/settings_container"/>
 
-    <!-- Contenedor para las preferencias -->
     <FrameLayout
         android:id="@+id/settings_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingTop="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp">
 
-    <!-- Fragmento para la barra de navegación inferior (BottomNav) -->
-    <androidx.fragment.app.FragmentContainerView
+
+    </FrameLayout>
+
+    <fragment
+        android:id="@+id/bottom_nav"
         android:name="com.ericandpau.pokeshopk.BottomNav"
-        android:id="@+id/BottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout="@layout/fragment_bottom_nav"/>
+        tools:layout="@layout/fragment_bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
