--- a/app/src/main/res/layout/fragment_bottom_nav.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_menu"
