--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -29,39 +29,15 @@
         android:layout_marginEnd="26dp"
         android:backgroundTint="@color/OnSecondary_night"/>
 
-
-    <fragment
-        android:layout_marginTop="65dp"
-        android:name="com.ericandpau.pokeshopk.Producte"
-        android:id="@+id/product1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_producte"
-        app:layout_constraintTop_toBottomOf="@+id/NavBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <fragment
-        android:name="com.ericandpau.pokeshopk.Producte"
-        android:id="@+id/product2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_producte"
-        app:layout_constraintTop_toBottomOf="@+id/product1"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        app:layout_constraintTop_toBottomOf="@id/btnFiltres"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"/>
-
-    <fragment
-        android:name="com.ericandpau.pokeshopk.Producte"
-        android:id="@+id/product3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_producte"
-        app:layout_constraintTop_toBottomOf="@+id/product2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"/>
+        android:layout_width="match_parent"
+        android:background="@color/black"
+        android:layout_height="0dp"/>
 
     <fragment
         android:id="@+id/bottom_nav"
@@ -73,5 +49,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout="@layout/fragment_bottom_nav" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
