--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -40,6 +40,7 @@
                 android:padding="10dp"/>
 
             <Button
+                android:id="@+id/compraButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 app:layout_constraintStart_toEndOf="@+id/textPokemon"
