--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:paddingBottom="15dp"
-    android:paddingTop="15dp"
-    android:background="@color/secondary_day">
+    android:layout_height="wrap_content"
+    android:background="@color/secondary_day"
+    android:fitsSystemWindows="true">
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
