--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login"
-    android:background="@drawable/background_clear">
+    android:background="@drawable/background_clear"
+    android:fitsSystemWindows="true">
 
     <fragment
         android:name="com.ericandpau.pokeshopk.NavBar"
