--- a/app/src/main/res/layout/fragment_bottom_nav.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav.xml
@@ -3,19 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    >
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/secondary_day"
         style="@style/BottomNavigationViewStyle"
-        app:itemIconTint="@color/primary_day"/>
+        app:itemIconTint="@color/primary_day"
+        android:padding="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
