--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -29,22 +29,25 @@
                 android:background="@drawable/img_background"/>
 
             <TextView
+                android:gravity="center_vertical"
                 android:id="@+id/textPokemon"
-                android:layout_width="110dp"
-                android:layout_height="130dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@+id/foto"
                 app:layout_constraintStart_toEndOf="@+id/foto"
-                app:layout_constraintBottom_toBottomOf="@+id/foto"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/compraButton"
                 android:textAppearance="?attr/textAppearanceBodySmall"
-                android:text="@string/product_description"
+                android:text="Pikachu"
+                android:textSize="12pt"
+                android:textStyle="bold"
                 android:padding="10dp"/>
 
             <Button
                 android:id="@+id/compraButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
-                app:layout_constraintStart_toEndOf="@+id/textPokemon"
-                app:layout_constraintBottom_toBottomOf="@+id/textPokemon"
+                app:layout_constraintBottom_toBottomOf="@+id/foto"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/compra"
                 android:layout_marginEnd="15dp"/>
