--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="25dp">
 
@@ -18,8 +18,8 @@
 
             <ImageView
                 android:id="@+id/foto"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -28,34 +28,57 @@
                 android:src="@drawable/pikachu"
                 android:background="@drawable/img_background"/>
 
-            <TextView
-                android:gravity="center_vertical"
+            <LinearLayout
                 android:id="@+id/textPokemon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 app:layout_constraintTop_toTopOf="@+id/foto"
                 app:layout_constraintStart_toEndOf="@+id/foto"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/compraButton"
-                android:textAppearance="?attr/textAppearanceBodySmall"
-                android:text="Pikachu"
-                android:textSize="12pt"
-                android:textStyle="bold"
-                android:padding="10dp"/>
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp">
+
+
+                <TextView
+                    android:id="@+id/textNom"
+                    android:gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBodySmall"
+                    android:text="Pikachu"
+                    android:textSize="12pt"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/textTipo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tipo: rock"
+                    android:textSize="9pt"/>
+                <TextView
+                    android:id="@+id/textAlsada"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Alçada: 170"
+                    android:textSize="9pt"/>
+                <TextView
+                    android:id="@+id/text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/compraButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@+id/textPokemon"
                 app:layout_constraintBottom_toBottomOf="@+id/foto"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/compra"
-                android:layout_marginEnd="15dp"/>
-
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
