--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -68,16 +68,27 @@
 
             </LinearLayout>
 
+            <ImageButton
+                android:id="@+id/btnEliminar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/basura_icon"
+                android:backgroundTint="#00FFFFFF"
+                app:layout_constraintTop_toBottomOf="@+id/textPokemon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="15dp"/>
+
             <Button
                 android:id="@+id/compraButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toBottomOf="@+id/textPokemon"
                 app:layout_constraintBottom_toBottomOf="@+id/foto"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/foto"
+                app:layout_constraintEnd_toStartOf="@+id/btnEliminar"
                 android:text="@string/compra"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="15dp"/>
+                android:layout_marginBottom="10dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
