--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -35,7 +35,6 @@
                 android:orientation="vertical"
                 app:layout_constraintTop_toTopOf="@+id/foto"
                 app:layout_constraintStart_toEndOf="@+id/foto"
-                app:layout_constraintBottom_toTopOf="@+id/compraButton"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="10dp">
 
@@ -69,6 +68,18 @@
             </LinearLayout>
 
             <ImageButton
+                android:id="@+id/btnModificar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#00FFFFFF"
+                android:src="@drawable/pokeball"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textPokemon"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <ImageButton
                 android:id="@+id/btnEliminar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,17 +88,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/textPokemon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="15dp"/>
+                android:layout_marginEnd="50dp"/>
 
             <Button
-                android:id="@+id/compraButton"
+                android:id="@+id/btnComprar"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toBottomOf="@+id/textPokemon"
                 app:layout_constraintBottom_toBottomOf="@+id/foto"
                 app:layout_constraintStart_toEndOf="@id/foto"
                 app:layout_constraintEnd_toStartOf="@+id/btnEliminar"
-                android:text="@string/compra"
+                android:layout_marginStart="10dp"
+                android:text="Buy"
                 android:layout_marginBottom="10dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
